k8/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client-pods
  template:
    metadata:
      labels:
        component: client-pods
    spec:
      containers:
        - name: client-container
          image: dibyanshusinha/k8-ci-cd-client
          ports:
            - containerPort: 3000
