k8/core-apis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: core-api-pods
  template:
    metadata:
      labels:
        component: core-api-pods
    spec:
      containers:
        - name: core-api-container
          image: dibyanshusinha/k8-ci-cd-core-apis
          ports:
            - containerPort: 5000
