k8/core-apis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: core-api-pods
  ports:
    - port: 5000
      targetPort: 5000
